--- a/ImperaturService/views/index.html
+++ b/ImperaturService/views/index.html
@@ -5,36 +5,71 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Imperatur Market</title>
 		<script src="static/angular.min.js"></script>
-    	<script src="static/accounts2.js"></script>
+        <script src="static/accounts2.js"></script>
+
 		
 	</head>
 
-	<body ng-controller="accountsection">
-<div class="pure-g" ng-repeat="account in accounts">
-	<div class="pure-u-1-3"><p>{{account.accountname}}</p></div>
-	<div class="pure-u-1-3"><p>{{account.availablefunds}}</p></div>
-	<div class="pure-u-1-3"><p>{{account.totalfunds}}</p></div>
-</div>
+	<body ng-controller="accountListController">
+        <div class="pure-menu pure-menu-horizontal">
+            <a href="#" class="pure-menu-heading pure-menu-link">Imperatur Market</a>
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Account</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Setting</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">System</a></li>
+            </ul>
+        </div>
 
 
-	</body>
+        <div class="pure-g">
+            <div class="pure-u-1-3" >
+                <table class="pure-table pure-table-horizontal">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Available funds</th>
+                            <th>Total funds</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr ng-repeat="account in accounts" ng-click="select(account.identifier)">
+                            <td>{{account.accountname}}</td>
+                            <td>{{account.availablefunds}}</td>
+                            <td>{{account.totalfunds}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="pure-u-2-3" >
+                <p>
+                    {{selectedaccount.accountname}}
+                </p>
+                <p>
+                    {{selectedaccount.change}}
+                </p>
+                <table class="pure-table pure-table-horizontal">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Amount</th>
+                            <th>Type</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr ng-repeat="transaction in selectedaccount.transactions">
+                            <td>{{transaction.transdate}}</td>
+                            <td>{{transaction.amount}}</td>
+                            <td>{{transaction.transactiontype}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+       </div>
+
+        
+
+</body>
 </html>
-
-<!-- 
-	<table>
-        <theader>
-          <tr>
-			<td>Name</td>
-			<td>Available funds</td>
-			<td>totalfunds</td></tr>
-        </theader>
-        <tbody>
-			<tr ng-repeat="account in accounts" class="pure-g">
-				<td>{{account.accountname}}</td>
-				<td>{{account.availablefunds}}</td>
-				<td>{{account.totalfunds}}</td>				
-			 </tr>
-		 </tbody>
-		 </table>
-
- -->
