--- a/ImperaturService/views/index.html
+++ b/ImperaturService/views/index.html
@@ -6,8 +6,8 @@
     <title>Imperatur Market</title>
     <script src="static/angular.min.js"></script>
     <script src="static/accounts2.js"></script>
-    <script src="static/chart.js/Chart.min.js"></script>
-    <script src="static/angular-chart.js/angular-chart.min.js"></script>
+<!--    <script src="static/chart.js/Chart.min.js"></script>
+    <script src="static/angular-chart.js/angular-chart.min.js"></script>-->
 
     <link href='https://fonts.googleapis.com/css?family=Ubuntu:300,400,700' rel='stylesheet' type='text/css'>
     <style>
